Fix whitespace around heading

--- a/styles/base/partials/_header.scss
+++ b/styles/base/partials/_header.scss
@@ -76,10 +76,11 @@ header nav {
 header h1 {
   font-size: 2em;
   margin: 2em 2em 0 2em;
-  padding: 0 1em;
+  padding: 0 0;
 
   @media (min-width: 44em) {
     margin: 2em auto 0 auto;
     max-width: 20em;
+    padding: 0 1em;
   }
 }
